<resources>
    <string name="app_name">TravelBuddy</string>

    <!-- Launch Page -->
    <string name="launch_subtext">Discover a world of opportunities with us, stress-free</string>
    <string name="launch_btn">Join us</string>


    <!-- Signup Pages -->
    <string name="signup_title">Join us today, welcome!</string>
    <string name="signup_subtext">Let us know your name and create a password for your new account</string>
    <string name="signup_input_name">Enter Name</string>
    <string name="signup_input_createpwd">Create Password</string>
    <string name="signup_input_confirmpwd">Confirm Password</string>
    <string name="signup_input_createacc">Create Account</string>


    <!--Login Pages-->
    <string name="login_title">Hello, welcome back!</string>
    <string name="login_subtext">Enter your credentials to manage itineraries with us.</string>
    <string name="login_input_phone">Phone Number</string>
    <string name="login_input_pwd">Password</string>
    <string name="login_btn1">Login</string>
    <string name="login_signup1">Don\'t have an account? </string>
    <string name="login_signup2">Sign up</string>
    <string name="login_forgot_text">Forgot your password?</string>


    <!--Personal Questions-->
    <string name="btn_text">Next</string>
    <string name="skip_text">Skip All</string>
    <string name="start_title">Let\'s personalize your journey!</string>
    <string name="start_subtext">To improve your TravelBuddy experience, we\'ll guide you through a few simple questions.</string>

    <!--Question 1-->
    <string name="q1_title">Which type of places do you prefer? </string>
    <string name="q1_subtext">Tell us what you’re most drawn to on a trip. You can select more than one option!</string>
    <string name="q1_option_1">Natural Sceneries</string>
    <string name="q1_option_2">Vibrant, Bustling Cities</string>
    <string name="q1_option_3">Shopping Districts</string>
    <string name="q1_option_4">Historical Landmarks</string>

    <!--Question 2-->
    <string name="q2_title">What is your preferred travel pace?</string>
    <string name="q2_subtext">
    Choose how quickly you\'d like your trip to unfold. Do you enjoy something packed or something slower?
    </string>


    <!--Question 3-->
    <string name="q3_title">How open are you to trying new things on a trip?</string>
    <string name="q3_subtext">Do you prefer the familiar, some new things, or anything exciting?</string>

    <!--Question 4-->
    <string name="q4_title">How much time do you usually dedicate to a single place?</string>
    <string name="q4_subtext">Decide how long you like to stay. Do you prefer quick visits or taking your time to explore?</string>


    <!--Question 5-->
    <string name="q5_title">Are you planning for a specific trip or just exploring?</string>
    <string name="q5_subtext">Let us know if you’re planning something specific or simply looking for inspiration?</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Create Fragment -->
    <string name="create_frg_title">Plan a new trip</string>
    <string name="create_frg_subtext">Create a journey to visualize and manage your upcoming adventure</string>


    <!--Itinerary Fragment Dropdown List-->

    <string-array name="itinerary_filter_options">
        <item>All</item>
        <item>Solo</item>
        <item>Friends</item>
    </string-array>


</resources>