<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@android:color/white"
    tools:context=".Login1">

    <ImageButton
        android:id="@+id/imageButton1"
        style="@style/BackButton"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        style="@style/TitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="100dp"
        android:text="@string/login_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView2"
        style="@style/Subtext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@id/firstNameGroup"
        app:layout_constraintEnd_toEndOf="@id/firstNameGroup"
        app:layout_constraintTop_toBottomOf="@id/textView"
        android:text="@string/login_subtext" />

    <LinearLayout
        android:id="@+id/firstNameGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView2">

        <TextView
            android:id="@+id/label_firstname"
            style="@style/InputLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_input_phone" />

        <EditText
            android:id="@+id/editText1"
            style="@style/InputField"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:inputType="phone" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/secondNameGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/firstNameGroup">

        <TextView
            android:id="@+id/label_createpw"
            style="@style/InputLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_input_createpwd" />

        <EditText
            android:id="@+id/editText_createpwd"
            style="@style/InputField"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:inputType="textPassword" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_forgot_text"
        android:textSize="16sp"
        android:textColor="@color/skyblue"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/secondNameGroup"
        app:layout_constraintEnd_toEndOf="@id/secondNameGroup" />

    <Button
        android:id="@+id/button"
        style="@style/PrimaryButton"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/login_btn1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView3" />

    <LinearLayout
        android:id="@+id/signup_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/textLogin1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Don't have an account? "
            android:textSize="16sp"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/textLogin2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_signup2"
            android:textSize="16sp"
            android:textColor="@color/skyblue" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
