<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@android:color/white"
    tools:context=".Signup1">

    <ImageButton
        android:id="@+id/imageButton1"
        style="@style/BackButton"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        style="@style/TitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="100dp"
        android:text="@string/signup_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        style="@style/Subtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/signup_subtext"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />




    <LinearLayout
        android:id="@+id/firstNameGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <TextView
            style="@style/InputLabel"
            android:id="@+id/label_firstname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_input_name" />

        <EditText
            android:id="@+id/editText1"
            style="@style/InputField"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/secondNameGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstNameGroup">

        <TextView
            style="@style/InputLabel"
            android:id="@+id/label_createpw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_input_createpwd" />

        <EditText
            android:id="@+id/editText_createpwd"
            style="@style/InputField"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:inputType="textPassword"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lastNameGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/secondNameGroup">

        <TextView
            style="@style/InputLabel"
            android:id="@+id/label_confirmpwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_input_confirmpwd" />

        <EditText
            android:id="@+id/editText_confirmpw"
            style="@style/InputField"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:inputType="textPassword"/>
    </LinearLayout>

    <Button
        android:id="@+id/button"
        style="@style/PrimaryButton"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/signup_input_createacc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastNameGroup" />


    <LinearLayout
        android:id="@+id/login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp">

        <TextView
            android:id="@+id/textLogin1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Already have an account? "
            android:textSize="16sp"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/textLogin2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Log In"
            android:textSize="16sp"
            android:textColor="@color/skyblue" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>