<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@android:color/white"
    tools:context=".questions.PersonalQuestion1">

    <ImageButton
        android:id="@+id/back_btn"
        style="@style/BackButton"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        style="@style/TitleText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:text="@string/q1_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />



    <TextView
        android:id="@+id/textView2"
        style="@style/Subtext"
        android:layout_width="0dp"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@id/textView"
        app:layout_constraintTop_toBottomOf="@id/textView"
        android:text="@string/q1_subtext" />

    <GridLayout
        android:id="@+id/options_grid"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alignmentMode="alignMargins"
        android:columnCount="2"
        android:rowCount="2"
        android:rowOrderPreserved="false"
        app:layout_constraintTop_toBottomOf="@id/textView2"
        app:layout_constraintBottom_toTopOf="@id/next_btn"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="0dp" >

    <!-- 1st cell -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="8dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btn_nature"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:padding="0dp"
                android:scaleType="fitCenter"
                android:src="@drawable/shopping_pic" />

            <TextView
                android:id="@+id/tv_nature"
                style="@style/Subtext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:text="@string/q1_option_1" />
        </LinearLayout>

        <!-- 2nd cell -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="8dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btn_city"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:padding="0dp"
                android:scaleType="fitCenter"
                android:src="@drawable/shopping_pic" />

            <TextView
                android:id="@+id/tv_city"
                style="@style/Subtext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:text="@string/q1_option_2" />
        </LinearLayout>

        <!-- 3rd cell -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="8dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btn_shopping"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:padding="0dp"
                android:scaleType="fitCenter"
                android:src="@drawable/shopping_pic" />

            <TextView
                android:id="@+id/tv_shopping"
                style="@style/Subtext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:text="@string/q1_option_3" />
        </LinearLayout>

        <!-- 4th cell -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="8dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btn_landmarks"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:padding="0dp"
                android:scaleType="fitCenter"
                android:src="@drawable/shopping_pic" />

            <TextView
                android:id="@+id/tv_landmarks"
                style="@style/Subtext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:text="@string/q1_option_4" />
        </LinearLayout>


    </GridLayout>


    <Button
        android:id="@+id/next_btn"
        style="@style/PrimaryButton"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="10dp"
        android:text="@string/btn_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/textView" />

    <TextView
        android:id="@+id/skipall_textview"
        android:textSize="20sp"
        android:textColor="@color/lightgrey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skip_text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.06" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.94" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="10dp"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintBottom_toTopOf="@id/textView"
        android:layout_marginBottom="12dp"
        android:max="5"
        android:progress="1"
        android:progressTint="@color/skyblue"
        android:backgroundTint="@color/lightgrey"/>




</androidx.constraintlayout.widget.ConstraintLayout>